# libratone-rs

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
src/: commands.rs  device.rs  discovery_reply.rs  fake.rs  lib.rs  main.rs  protocol.rs
src/fake/: device.rs  mod.rs
src/ui/: appstate.rs  commands.rs  delegate.rs  mod.rs
src/ui/controllers/: mod.rs  volume.rs
src/ui/pages/: device_details.rs  device_list.rs  mod.rs
src/ui/widgets/: page.rs
ui/: Cargo.toml
ui/src/: appstate.rs  commands.rs  delegate.rs
ui/src/controllers/: volume.rs
ui/src/pages/: device_details.rs  device_list.rs
