[package]
name = "libratone-rs"
version = "0.1.0"
authors = ["Adrien Bustany <adrien@bustany.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libratone_rs"

[dependencies]
net2 = "0.2.35"
anyhow = "1.0.38"
httparse = "1.3.4"
serde_json = "1.0.62"
serde = { version = "1.0.123", features = ["derive"] }

[workspace]
members = ["ui"]
