[package]
name = "libratone-rs"
version = "0.1.0"
authors = ["Adrien Bustany <adrien@bustany.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libratone_rs"

[dependencies]
net2 = "0.2.37"
anyhow = "1.0.71"
httparse = "1.8.0"
serde_json = "1.0.96"
serde = { version = "1.0.162", features = ["derive"] }

[workspace]
members = ["ui"]
